Fix bug in link-bibliography collapse

--- a/css/default.css
+++ b/css/default.css
@@ -1643,7 +1643,6 @@ pre code {
 
 /* Monochrome-ish code highlighting theme, loosely based on Pygments's algol_nu (CSS: https://github.com/lukelbd/proplot/blob/master/docs/_static/pygments/algol_nu.css demo: https://xyproto.github.io/splash/docs/longer/algol_nu.html ; Python: https://github.com/pycom/EricShort/blob/master/ThirdParty/Pygments/pygments/styles/algol.py ). */
 /* This skips the underlining and overuse of graying, and uses a bit of blue as an alternative, and retains red for warnings/errors. */
-/* TODO: create a natural code sample that exercises all the classes; check readability of the faded comments in dark mode */
 code span    { color: var(--GW-syntax-highlight-color-normal); } /* Normal */
 code span.at { color: var(--GW-syntax-highlight-color-attribute); } /* Attribute */
 code span.dt { color: var(--GW-syntax-highlight-color-data-type); font-weight: bold; font-style: italic  } /* DataType */
@@ -3324,8 +3323,10 @@ body.directory-index #disqus_thread {
 
 #link-bibliography > ol {
     padding: 0 0.75em 0 1.75em;
-    overflow: visible;
     box-shadow: none;
+}
+#link-bibliography.expanded > ol {
+    overflow: visible;
 }
 
 #link-bibliography > ol > li > * {
